--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
   <!-- Do not change html markup in header. -->
-  <header class="wrapper">
+  <header role="banner" class="wrapper">
     <h1><img src="images/bloomscape-logo.svg" alt="Bloomscape logo"></h1>
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="#">Plants</a></li>
         <li><a href="#">Care tools</a></li>
@@ -24,19 +24,82 @@
 
 
   <!-- Add content for your product page using provided text in content.txt -->
-  <main class="wrapper">
+  <main role="main" class="wrapper">
 
+  <img src="images/money-tree-wooden-plant-stand.jpeg" alt="">
+  <h2>Money Tree</h2>
+  <data value="169">$169</data>
+  <button type="button" name="button">Add to cart</button>
+  <p>Popular for its use in Feng Shui, the Money Tree is a pet-friendly and air-purifying plant with large star-shaped leaves and a braided trunk to give your home a tropical feel.</p>
 
+  <h4>Details & Care</h4>
+  <dl>
+    <dt>Size:</dt>
+    <dd><data value="32-40">XL - 32”-40” tall (including recycled plastic Ecopot)</data></dd>
+    <dt>Difficulty:</dt>
+    <dd><data value="">No-fuss - Carefree<data></dd>
+    <dt>Light:</dt>
+    <dd><data value="">Low to Bright Indirect<data></dd>
+    <dt>Pet friendly:</dt>
+    <dd><data value="">Yes - Non-toxic and pet-friendly<data></dd>
+    <dt>Air Cleaner:</dt>
+    <dd><data value="">Yes - Releases oxygen and absorbs pollutants<data></dd>
+  </dl>
 
+  <h4>What’s Included</h4>
+  <ul>
+    <li>Healthy plant pre-potted with premium soil</li>
+    <li>Ecopots pot and saucer</li>
+    <li>All the tips and tricks for expert-level care</li>
+  </ul>
 
+  <img src="images/money-tree-alt-detailed.jpeg" alt="">
+  <img src="images/money-tree-detailed.jpeg" alt="">
+  <img src="images/money-tree-plant-size.png" alt="">
 
+  <h4>Description</h4>
+  <p>Composed of several Pachinra aquatica plants braided together, the Money Tree resembles both a tree and a palm. Native from Mexico to northern South America where it grows up to 60 feet tall outdoors, this is a commonly found houseplant in East Asia where the braided trunk cultivation was popularized.</p>
+  <p>The Money Tree was named after the Feng Shui belief that it will foster positive energy and bring good luck to its owner. This plant may also reduce stress, anxiety, and may also help to relieve sleeping disorders.</p>
+  <p>A Clean Air Study by NASA named the Money Tree as one of the most effective houseplants for clearing toxins from the air of your home.</p>
+
+  <h4>Botanical name:</h4>
+  <p>Pachira aquatica</p>
+
+  <h4>Common name(s):</h4>
+  <p>Money Tree, Good Luck Tree, Malabar Chestnut, Saba Nut, Guiana Chestnut, Wild Kapock Tree, Mexican Money Tree</p>
+
+  <section>
+    <h3>What people are saying</h3>
+    <blockquote>
+      "This is the best plant store I have ever ordered from! My plants were shipped/delivered so fast. When I had a question, Bloomscape got back to me right away, and they were so friendly!"
+    </blockquote>
+    <cite>- Jess J.</cite>
+
+    <blockquote>
+      "The plants are in such great shape when they arrive, the pots are beautiful, and the variety is fantastic."
+    </blockquote>
+    <cite>- Meghan K.</cite>
+
+    <blockquote>
+      "I knew nothing about plants, and was able to feel confident about caring for them. I haven’t killed one yet, thanks to help from your care guides and Plant Mom!"
+    </blockquote>
+    <cite>- Kayla B.</cite>
+  </section>
+
+  <section>
+    <h3>People also browsed</h3>
+    <img src="images/sanseviera.jpeg" alt="">
+    <img src="images/mini-money-tree.jpeg" alt="">
+    <img src="images/red-prayer-plant.jpeg" alt="">
+    <img src="images/bird-of-paradise.jpeg" alt="">
+  </section>
 
   </main>
 
 
 
   <!-- Do not change html markup in footer. -->
-  <footer class="wrapper">
+  <footer role="contentinfo" class="wrapper">
     <strong>© 2022 Bloomscape</strong>
   </footer>
 
