--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Bloomscape | Money Tree</title>
-  <!-- We need to add in an important meta tag here -->
-  <!-- Link the css here -->
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
   <!-- If you are using a Google font, add your links here OR as @import in your css  -->
 </head>
 <body>
 
   <!-- Do not change html markup in header. -->
   <header role="banner" class="wrapper">
-    <h1><img src="images/bloomscape-logo.svg" alt="Bloomscape logo"></h1>
+    <h1><img src="images/bloomscape-logo.svg" alt="Bloomscape logo" class="logo"></h1>
     <nav role="navigation">
       <ul>
         <li><a href="#">Plants</a></li>
@@ -26,49 +26,64 @@
   <!-- Add content for your product page using provided text in content.txt -->
   <main role="main" class="wrapper">
 
-  <img src="images/money-tree-wooden-plant-stand.jpeg" alt="">
-  <h2>Money Tree</h2>
-  <data value="169">$169</data>
-  <button type="button" name="button">Add to cart</button>
-  <p>Popular for its use in Feng Shui, the Money Tree is a pet-friendly and air-purifying plant with large star-shaped leaves and a braided trunk to give your home a tropical feel.</p>
+  <section class="money-tree">
+    <img src="images/money-tree-wooden-plant-stand.jpeg" alt="photo of money tree">
+    <div>
+      <h2>Money Tree</h2>
+      <p><data value="169">$169</data></p>
+      <a href="#" class="button">Add to cart</a>
+      <p>Popular for its use in Feng Shui, the Money Tree is a pet-friendly and air-purifying plant with large star-shaped leaves and a braided trunk to give your home a tropical feel.</p>
 
-  <h4>Details & Care</h4>
-  <dl>
-    <dt>Size:</dt>
-    <dd><data value="32-40">XL - 32”-40” tall (including recycled plastic Ecopot)</data></dd>
-    <dt>Difficulty:</dt>
-    <dd><data value="">No-fuss - Carefree<data></dd>
-    <dt>Light:</dt>
-    <dd><data value="">Low to Bright Indirect<data></dd>
-    <dt>Pet friendly:</dt>
-    <dd><data value="">Yes - Non-toxic and pet-friendly<data></dd>
-    <dt>Air Cleaner:</dt>
-    <dd><data value="">Yes - Releases oxygen and absorbs pollutants<data></dd>
-  </dl>
+      <h4>Details & Care</h4>
+      <dl>
+        <dt>Size:</dt>
+        <dd>XL - 32”-40” tall (including recycled plastic Ecopot)</dd>
+        <dt>Difficulty:</dt>
+        <dd>No-fuss - Carefree</dd>
+        <dt>Light:</dt>
+        <dd>Low to Bright Indirect</dd>
+        <dt>Pet friendly:</dt>
+        <dd>Yes - Non-toxic and pet-friendly</dd>
+        <dt>Air Cleaner:</dt>
+        <dd>Yes - Releases oxygen and absorbs pollutants</dd>
+      </dl>
 
-  <h4>What’s Included</h4>
-  <ul>
-    <li>Healthy plant pre-potted with premium soil</li>
-    <li>Ecopots pot and saucer</li>
-    <li>All the tips and tricks for expert-level care</li>
-  </ul>
+      <h4>What’s Included</h4>
+      <ul>
+        <li>Healthy plant pre-potted with premium soil</li>
+        <li>Ecopots pot and saucer</li>
+        <li>All the tips and tricks for expert-level care</li>
+      </ul>
+    </div>
+  </section>
 
-  <img src="images/money-tree-alt-detailed.jpeg" alt="">
-  <img src="images/money-tree-detailed.jpeg" alt="">
-  <img src="images/money-tree-plant-size.png" alt="">
+  <div class="product">
+    <img src="images/money-tree-alt-detailed.jpeg" alt="photo of the braided stem of the money tree">
+    <img src="images/money-tree-detailed.jpeg" alt="photo of the leaves of the money tree">
+    <img src="images/money-tree-plant-size.png" alt="photo of the size of the money tree">
+  </div>
 
-  <h4>Description</h4>
-  <p>Composed of several Pachinra aquatica plants braided together, the Money Tree resembles both a tree and a palm. Native from Mexico to northern South America where it grows up to 60 feet tall outdoors, this is a commonly found houseplant in East Asia where the braided trunk cultivation was popularized.</p>
-  <p>The Money Tree was named after the Feng Shui belief that it will foster positive energy and bring good luck to its owner. This plant may also reduce stress, anxiety, and may also help to relieve sleeping disorders.</p>
-  <p>A Clean Air Study by NASA named the Money Tree as one of the most effective houseplants for clearing toxins from the air of your home.</p>
+  <div class="description">
+    <h4>Description</h4>
+    <p>Composed of several Pachinra aquatica plants braided together, the Money Tree resembles both a tree and a palm. Native from Mexico to northern South America where it grows up to 60 feet tall outdoors, this is a commonly found houseplant in East Asia where the braided trunk cultivation was popularized.</p>
+    <p>The Money Tree was named after the Feng Shui belief that it will foster positive energy and bring good luck to its owner. This plant may also reduce stress, anxiety, and may also help to relieve sleeping disorders.</p>
+    <p>A Clean Air Study by NASA named the Money Tree as one of the most effective houseplants for clearing toxins from the air of your home.</p>
 
-  <h4>Botanical name:</h4>
-  <p>Pachira aquatica</p>
+    <dl>
+      <dt>Botanical name:</dt>
+      <dd>Pachira aquatica</dd>
+      <dt>Common name(s):</dt>
+      <dd>Money Tree,</dd>
+      <dd>Good Luck Tree,</dd>
+      <dd>Malabar Chestnut,</dd>
+      <dd>Saba Nut,</dd>
+      <dd>Guiana Chestnut,</dd>
+      <dd>Wild Kapock Tree,</dd>
+      <dd>Mexican Money Tree</dd>
+    </dl>
+  </div>
 
-  <h4>Common name(s):</h4>
-  <p>Money Tree, Good Luck Tree, Malabar Chestnut, Saba Nut, Guiana Chestnut, Wild Kapock Tree, Mexican Money Tree</p>
-
-  <section>
+  <div class="quotes">
     <h3>What people are saying</h3>
     <blockquote>
       "This is the best plant store I have ever ordered from! My plants were shipped/delivered so fast. When I had a question, Bloomscape got back to me right away, and they were so friendly!"
@@ -84,14 +99,35 @@
       "I knew nothing about plants, and was able to feel confident about caring for them. I haven’t killed one yet, thanks to help from your care guides and Plant Mom!"
     </blockquote>
     <cite>- Kayla B.</cite>
-  </section>
+  </div>
 
   <section>
-    <h3>People also browsed</h3>
-    <img src="images/sanseviera.jpeg" alt="">
-    <img src="images/mini-money-tree.jpeg" alt="">
-    <img src="images/red-prayer-plant.jpeg" alt="">
-    <img src="images/bird-of-paradise.jpeg" alt="">
+      <h3>People also browsed</h3>
+      <div class="browsed">
+        <div class="sanseviera">
+          <img src="images/sanseviera.jpeg" alt="photo of a sanseviera plant">
+          <p>Sanseviera</p>
+          <p>$149</p>
+        </div>
+
+        <div class="mini-money">
+          <img src="images/mini-money-tree.jpeg" alt="photo of a mini money tree">
+          <p>Mini Money Tree</p>
+          <p>$49</p>
+        </div>
+
+        <div class="prayer">
+          <img src="images/red-prayer-plant.jpeg" alt="photo of a red prayer plant">
+          <p>Red Prayer Plant</p>
+          <p>$39</p>
+        </div>
+
+        <div class="bop">
+          <img src="images/bird-of-paradise.jpeg" alt="photo of a bird of paradise plant">
+          <p>Bird of Paradise</p>
+          <p>$199</p>
+        </div>
+      </div>
   </section>
 
   </main>
