--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <section class="money-tree">
     <img src="images/money-tree-wooden-plant-stand.jpeg" alt="photo of money tree">
-    <div>
+    <div class="details">
       <h2>Money Tree</h2>
       <p><data value="169">$169</data></p>
       <a href="#" class="button">Add to cart</a>
@@ -57,13 +57,13 @@
     </div>
   </section>
 
-  <div class="product">
+  <section class="product">
     <img src="images/money-tree-alt-detailed.jpeg" alt="photo of the braided stem of the money tree">
     <img src="images/money-tree-detailed.jpeg" alt="photo of the leaves of the money tree">
     <img src="images/money-tree-plant-size.png" alt="photo of the size of the money tree">
-  </div>
+  </section>
 
-  <div class="description">
+  <section class="description">
     <h4>Description</h4>
     <p>Composed of several Pachinra aquatica plants braided together, the Money Tree resembles both a tree and a palm. Native from Mexico to northern South America where it grows up to 60 feet tall outdoors, this is a commonly found houseplant in East Asia where the braided trunk cultivation was popularized.</p>
     <p>The Money Tree was named after the Feng Shui belief that it will foster positive energy and bring good luck to its owner. This plant may also reduce stress, anxiety, and may also help to relieve sleeping disorders.</p>
@@ -81,9 +81,9 @@
       <dd>Wild Kapock Tree,</dd>
       <dd>Mexican Money Tree</dd>
     </dl>
-  </div>
+  </section>
 
-  <div class="quotes">
+  <section class="quotes">
     <h3>What people are saying</h3>
     <blockquote>
       "This is the best plant store I have ever ordered from! My plants were shipped/delivered so fast. When I had a question, Bloomscape got back to me right away, and they were so friendly!"
@@ -99,11 +99,11 @@
       "I knew nothing about plants, and was able to feel confident about caring for them. I haven’t killed one yet, thanks to help from your care guides and Plant Mom!"
     </blockquote>
     <cite>- Kayla B.</cite>
-  </div>
+  </section>
 
-  <section>
+  <section class="browsed">
       <h3>People also browsed</h3>
-      <div class="browsed">
+      <div class="browsed-images">
         <div class="sanseviera">
           <img src="images/sanseviera.jpeg" alt="photo of a sanseviera plant">
           <p>Sanseviera</p>
@@ -122,7 +122,7 @@
           <p>$39</p>
         </div>
 
-        <div class="bop">
+        <div class="b-o-p">
           <img src="images/bird-of-paradise.jpeg" alt="photo of a bird of paradise plant">
           <p>Bird of Paradise</p>
           <p>$199</p>
